# dway

./: .gitignore  .gitignore~  .rustfmt.toml  1  Cargo.toml  Dexterous.toml  README.md  book.toml  build.rs  clippy.toml  flake.nix  rust-toolchain.toml  rustc-ice-2024-04-14T09_50_57-349073.txt  rustc-ice-2024-04-14T09_50_57-349094.txt  rustc-ice-2024-04-14T09_51_03-353058.txt  rustc-ice-2024-04-14T09_51_03-353078.txt
bevy-relationship/: Cargo.toml
bevy-relationship-derive/: Cargo.toml
bevy-relationship-derive/src/: edge.rs  filter.rs  lib.rs  node.rs  path.rs  query.rs  v1.rs
bevy-relationship-derive/src/builder/: mod.rs
bevy-relationship-derive/src/model/: mod.rs
bevy-relationship-derive/src/syntax/: edge.rs  filter.rs  mod.rs  node.rs  path.rs  query.rs
bevy-relationship/benches/: bench.rs  component_graph.rs
bevy-relationship/src/: app.rs  builtins.rs  changed.rs  commands.rs  graph.rs  lib.rs  lifetime.rs  macros.rs  matrix.rs  reexport.rs  register.rs
bevy-relationship/src/component_graph/: mod.rs
bevy-relationship/tests/: component_graph.rs  lifetime.rs  query.rs
dway/: Cargo.toml  Cargo.toml~
dway-client-core/: Cargo.toml  Cargo.toml~
dway-client-core/src/: components.rs  compositor.rs  config.rs  debug.rs  decoration.rs  desktop.rs  input.rs  lib.rs  moving.rs  prelude.rs  protocol.rs  render.rs  resizing.rs  screen.rs  stages.rs  window.rs  workspace.rs
dway-client-core/src/controller/: dbus.rs  mod.rs  notify.rs  player.rs  systemcontroller.rs  systeminfo.rs  userinfo.rs  volume.rs
dway-client-core/src/layout/: mod.rs  tile.rs
dway-client-core/src/materials/: mod.rs  texture2d.rs
dway-client-core/src/model/: apps.rs  mod.rs
dway-client-core/src/navigation/: mod.rs  windowstack.rs
dway-launcher/: Cargo.toml
dway-launcher/src/: main.rs
dway-protocol/: Cargo.toml
dway-protocol/src/: window.rs
dway-server/: Cargo.toml
dway-server-test/dway-test-client/: Cargo.toml  build.rs
dway-server-test/dway-test-client/qml/: main.qml
dway-server-test/dway-test-client/src/: cxxqt_object.rs  gtk4_app.rs  main.rs  qt5_app.rs  shader.wgsl  winit_app.rs
dway-server/src/: client.rs  components.rs  cursor.rs  display.rs  egl.rs  eventloop.rs  events.rs  fractional_scale.rs  geometry.rs  index.rs  input.rs  keyboard.rs  layer.rs  lib.rs  log.rs  macros.rs  main.rs  math.rs  output.rs  placement.rs  popup.rs  prelude.rs  presentation.rs  resource.rs  schedule.rs  seat.rs  selection.rs  state.rs  surface.rs  viewporter.rs  virtual_keyboard.rs  wayland_window.rs  x11_window.rs  xdg.rs
dway-server/src/apps/: icon.rs  launchapp.rs  mod.rs
dway-server/src/clipboard/: mod.rs
dway-server/src/input/: grab.rs  keyboard.rs  mod.rs  pointer.rs  seat.rs  textinput.rs  touch.rs
dway-server/src/render/: drm.rs  gles.rs  import.rs  importnode.rs  mod.rs  util.rs  vulkan.rs
dway-server/src/util/: fail.rs  file.rs  mod.rs  rect.rs  serial.rs
dway-server/src/wayland/: cursor.rs  focus.rs  grabs.rs  inputs.rs  mod.rs  outputs.rs  render.rs  shell.rs  surface.rs
dway-server/src/wl/: buffer.rs  compositor.rs  cursor.rs  mod.rs  output.rs  region.rs  shell.rs  surface.rs
dway-server/src/wp/: drmlease.rs  mod.rs  text_input.rs
dway-server/src/x11/: display.rs  events.rs  mod.rs  screen.rs  systems.rs  util.rs  window.rs
dway-server/src/xdg/: activation.rs  activation_token.rs  mod.rs  popup.rs  positioner.rs  toplevel.rs  wm.rs
dway-server/src/zwlr/: data_control_device.rs  data_control_manager.rs  mod.rs
dway-server/src/zwp/: dambuffeedback.rs  dmabuffactory.rs  dmabuffeedback.rs  dmabufparam.rs  idle.rs  mod.rs
dway-server/src/zxdg/: decoration.rs  mod.rs  outputmanager.rs
dway-tty/: Cargo.toml
dway-tty/examples/: drm3d.rs  drm_render.rs  input.rs  mini.rs
dway-tty/src/: failure.rs  lib.rs  schedule.rs
dway-tty/src/drm/: camera.rs  connectors.rs  mod.rs  planes.rs  surface.rs
dway-tty/src/gbm/: buffer.rs  mod.rs
dway-tty/src/libinput/: convert.rs  keys.rs  mod.rs
dway-tty/src/render/: gles.rs  mod.rs  vulkan.rs
dway-tty/src/seat/: mod.rs
dway-tty/src/udev/: mod.rs
dway-tty/src/window/: mod.rs
dway-udev/: Cargo.toml
dway-udev/examples/: input.rs  mini.rs
dway-udev/src/: device.rs  failure.rs  input.rs  lib.rs  main.rs  output.rs  schedule.rs  seat.rs  surface.rs  util.rs
dway-udev/src/drm/: connectors.rs  mod.rs  planes.rs  surface.rs
dway-udev/src/ecs/: mod.rs
dway-udev/src/gbm/: buffer.rs  mod.rs
dway-udev/src/libinput/: convert.rs  keys.rs  mod.rs
dway-udev/src/render/: gles.rs  mod.rs  utils.rs  vulkan.rs
dway-udev/src/seat/: mod.rs
dway-udev/src/udev/: mod.rs
dway-udev/src/window/: mod.rs
dway-ui/: Cargo.toml
dway-ui-derive/: Cargo.toml
dway-ui-derive/src/: builder.rs  changed.rs  component.rs  dom.rs  domarg.rs  generate.rs  lib.rs  parser.rs  prelude.rs  style.rs
dway-ui-derive/src/domarg/: callback.rs  control.rs  data.rs  mod.rs  plugin.rs  relation.rs  state.rs  ui.rs
dway-ui-derive/src/domcontext/: mod.rs  spawn_context.rs  widget_context.rs
dway-ui-framework/: Cargo.toml  README.md
dway-ui-framework/examples/: blur.rs  button.rs  gallary.rs  many_ui.rs  mesh2d.rs  mvvm.rs  shader.rs  shader.rs   shape.rs  svg.rs  textarea.rs  widgets.rs
dway-ui-framework/src/: command.rs  diagnostics.rs  event.rs  future.rs  lib.rs  prelude.rs  widget.rs
dway-ui-framework/src/animation/: asset.rs  ease.rs  mod.rs  registry.rs  translation.rs  ui.rs
dway-ui-framework/src/assets/: mod.rs
dway-ui-framework/src/develop/: inspector.rs
dway-ui-framework/src/input/: mod.rs
dway-ui-framework/src/mvvm/: container.rs  (+10 more)
dway-ui-framework/tests/: common.rs
dway-ui/src/: lib.rs  prelude.rs  theme.rs  windows_area.rs
dway-util/: Cargo.toml
dway-util/src/: asset_cache.rs  diagnostic.rs  ecs.rs  eventloop.rs  formats.rs  lib.rs  logger.rs  macros.rs  stat.rs  temporary.rs  tokio.rs
dway/assets/: roboto.kttf
dway/src/: debug.rs  keys.rs  lib.rs  main.rs  opttions.rs  spawn_app.rs
dway_winit/: Cargo.toml
dway_winit/src/: converters.rs  lib.rs  system.rs  web_resize.rs  winit_windows.rs
(+144 files in other folders)
