[workspace]
resolver = "2"
members = [
    "dway",
    "dway-client-core",
    "dway-ui",
    "dway-ui-derive",
    "dway-server",
    "dway-util",
    "bevy-relationship",
    "bevy-relationship-derive",
    "dway-tty", "dway-ui-framework",
]

[workspace.dependencies]
anyhow = { version="1.0", features = ["backtrace"] }
lazy_static = "1.4.0"
uuid = "1.2.2"
memory-stats = "1.1.0"
rand = "0.8"
chrono = "0.4"
lru = "0.12"
nix = { version="^0.27", features=["fs", "signal", "socket", "mman"] }
serde = "1.0.158"
# dexterous_developer = { version="0.0.12", features = ["hot_internal"] }
regex = "^1.8"
regex-macro = "0.2.0"
bitflags = "2.3.1"
smallvec = "*"
scopeguard = "1.2.0"
smol_str = "0.2"

futures = "0.3.29"
futures-lite = "2.0.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"

log = "0.4"
failure = "0.1"
thiserror = "1"
pretty_env_logger = "0.5.0"
measure_time = "0.8.2"
tracing = { version = "*", features = [] }
tracing-appender = "*"
tracing-subscriber = "*"

derive_builder = "0.20.0"
smart-default = "0.7.1"
structstruck = "0.4.1"
getset = "0.1.2"
downcast-rs = "1.2.0"

convert_case = "0.6.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
syn_derive = "0.1.8"
derive-syn-parse = "0.1.5"

bevy-trait-query = {version="0.5.1", features=[]}
bevy_svg = { version="*", default-features = false, features = ["2d"] }
wgpu={version="*",features=["angle"]}
wgpu-hal={version="*",features=["gles"]}
glow = {version="*"}
khronos-egl = { version="*",features= ["dynamic","static"] }
ash = { version = "*", features = [] }

[workspace.dependencies.bevy]
version = "0.13.1"
default-features = false
features = [
  # "animation",
  "bevy_asset",
  "bevy_audio",
  # "bevy_gilrs",
  # "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  # "bevy_pbr",
  # "bevy_gltf",
  "bevy_render",
  # "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  # "vorbis",
  "x11",
  # "bevy_gizmos",
  "android_shared_stdcxx",
  # "tonemapping_luts",
  "default_font",
  "webgl2",
  "bevy_debug_stepping",

  "async-io",
  "wayland",
]

[patch.crates-io]
bevy_svg = {git="https://github.com/arnfaldur/bevy_svg",rev="53a53e5"}
bevy = {path="../../../Code/bevy/"}
bevy_log = {path="../../../Code/bevy/crates/bevy_log/"}
bevy_pbr = {path="../../../Code/bevy/crates/bevy_pbr/"}
bevy_core = {path="../../../Code/bevy/crates/bevy_core/"}
bevy_app = {path="../../../Code/bevy/crates/bevy_app/"}
bevy_utils = {path="../../../Code/bevy/crates/bevy_utils/"}
bevy_asset = {path="../../../Code/bevy/crates/bevy_asset/"}
bevy_core_pipeline = {path="../../../Code/bevy/crates/bevy_core_pipeline/"}
bevy_derive = {path="../../../Code/bevy/crates/bevy_derive/"}
bevy_ecs = {path="../../../Code/bevy/crates/bevy_ecs/"}
bevy_math = {path="../../../Code/bevy/crates/bevy_math/"}
bevy_reflect = {path="../../../Code/bevy/crates/bevy_reflect/"}
bevy_render = {path="../../../Code/bevy/crates/bevy_render/"}
bevy_transform = {path="../../../Code/bevy/crates/bevy_transform/"}
bevy_window = {path="../../../Code/bevy/crates/bevy_window/"}
bevy_hierarchy = {path="../../../Code/bevy/crates/bevy_hierarchy/"}
