[workspace]
resolver = "2"
members = [
    "dway",
    "dway-launcher",
    "dway-util",
    "dway-tty",
    "dway-server",
    "dway-client-core",
    "dway-ui",
    "dway-ui-derive",
    "dway-ui-framework",
    "bevy-relationship",
    "bevy-relationship-derive",
]

[workspace.dependencies]
anyhow = { version="1.0", features = ["backtrace"] }
lazy_static = "1.4.0"
uuid = "1.2.2"
memory-stats = "1.1.0"
rand = "0.8"
chrono = "0.4"
lru = "0.12"
nix = { version="^0.27", features=["fs", "signal", "socket", "mman", "time"] }
serde = "1.0.158"
dexterous_developer = { version="0.2.0", features = ["hot_internal", "cli"] }
bevy_dexterous_developer = {version="0.2.0", features = ["hot_internal", "hot"]}
regex = "^1.8"
regex-macro = "0.2.0"
bitflags = "2.3.1"
smallvec = "1.13"
scopeguard = "1.2.0"
smol_str = "0.2"
indexmap = "2.2.6"

futures = "0.3.29"
futures-lite = "2.0.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
tokio = { version="1.37.0", features=[] }

log = "0.4"
failure = "0.1"
thiserror = "1"
pretty_env_logger = "0.5.0"
measure_time = "0.8.2"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

derive_builder = "0.20.0"
smart-default = "0.7.1"
structstruck = "0.4.1"
getset = "0.1.2"
downcast-rs = "1.2.0"
derive_more = "0.99"

convert_case = "0.6.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
syn_derive = "0.1.8"
derive-syn-parse = "0.1.5"

bevy-trait-query = {version="0.5", features=[]}
bevy_svg = { version="*", default-features = false, features = ["2d"] }
wgpu={version="0.19",features=["angle"]}
wgpu-hal={version="0.19",features=["gles"]}
glow = {version="0.13"}
khronos-egl = { version="6",features= ["dynamic","static"] }
ash = { version = "0.37", features = [] }
drm-fourcc = "2.2.0"

wayland-server = { version="0.31.0",features = [] }
wayland-backend = { version="0.3.2", features = ["server_system"] }
wayland-protocols = { version = "0.31.0", features = ["unstable", "staging", "server", "wayland-server"]}

[workspace.dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
  # "animation",
  "bevy_asset",
  "bevy_audio",
  # "bevy_gilrs",
  # "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  # "bevy_pbr",
  # "bevy_gltf",
  "bevy_render",
  # "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  # "vorbis",
  "x11",
  # "bevy_gizmos",
  "android_shared_stdcxx",
  # "tonemapping_luts",
  "default_font",
  "webgl2",
  "bevy_debug_stepping",

  "async-io",
  "wayland",
  # "dynamic_linking",
]

[patch.crates-io]
bevy_svg = {git="https://github.com/arnfaldur/bevy_svg",rev="53a53e5"}
bevy = {git="https://github.com/wang-zi-tao/bevy",rev="92f55a7db744c03817489186d8fd5c06ef9ae50d"}
bevy_log = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_pbr = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_core = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_app = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_utils = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_asset = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_core_pipeline = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_derive = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_ecs = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_math = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_reflect = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_render = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_transform = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_window = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
bevy_hierarchy = { git = "https://github.com/wang-zi-tao/bevy", rev = "92f55a7db744c03817489186d8fd5c06ef9ae50d" }
