[workspace]
resolver = "2"
members = [
    "dway",
    "dway-util",
    "dway-tty",
    "dway-server",
    "dway-client-core",
    "dway-ui",
    "dway-ui-derive",
    "dway-ui-framework",
    "bevy-relationship",
    "bevy-relationship-derive",
    "dway-util", 
    "dway-server-test/dway-test-client",
]

[workspace.dependencies]
anyhow = { version="1.0", features = ["backtrace"] }
lazy_static = "1.4.0"
uuid = "1.2.2"
memory-stats = "1.1.0"
rand = "0.8"
chrono = "0.4"
lru = "0.12"
nix = { version="^0.27", features=["fs", "signal", "socket", "mman", "time"] }
serde = "1.0.158"
dexterous_developer = { version="0.3", features = ["bevy", "hot"] }
bevy_dexterous_developer = {version="0.3", features = ["hot"]}
regex = "^1.8"
regex-macro = "0.2.0"
bitflags = "2.3.1"
smallvec = "1.13"
scopeguard = "1.2.0"
smol_str = "0.2"
indexmap = "2.2.6"
rayon = "1.10.0"
dyn-eq = "0.1.3"
smallbox = "0.8"

futures = "0.3.29"
futures-lite = "2.0.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.11"
tokio = { version="1.37.0", features=["sync", "rt", "rt-multi-thread"] }

log = "0.4"
failure = "0.1"
thiserror = "1"
pretty_env_logger = "0.5.0"
measure_time = "0.8.2"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

derive_builder = "0.20.0"
smart-default = "0.7.1"
structstruck = "0.4.1"
getset = "0.1.2"
downcast-rs = "1.2.0"
derive_more = "0.99"
cfg-if = "1.0.0"

convert_case = "0.6.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
syn_derive = "0.1.8"
derive-syn-parse = "0.1.5"

bevy_framepace = "0.17"
bevy_mod_debugdump = { version="0.11.0" }
bevy_prototype_lyon = "0.12.0"
bevy-trait-query = {git="https://github.com/RobWalt/bevy-trait-query", branch="bevy-0.14-partial-update", features=[]}

wgpu={version="0.20",features=["angle"]}
wgpu-hal={version="0.21",features=["gles"]}
glow = {version="0.13"}
khronos-egl = { version="6",features= ["dynamic","static"] }
ash = { version = "0.37", features = [] }
drm-fourcc = "2.2.0"

wayland-server = { version="0.31.0",features = [] }
wayland-backend = { version="0.3.2", features = ["server_system"] }
wayland-protocols = { version = "0.31.0", features = ["unstable", "staging", "server", "wayland-server"]}
image = "0.25"

[workspace.dependencies.bevy_svg]
git="https://github.com/wang-zi-tao/bevy_svg"
rev="871dd4237d7dd829495eaeac0cc563eca52e5719"
default-features = false
features = ["2d"] 

[workspace.dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
  "bevy_dynamic_plugin",
  "bevy_color",
  "bevy_state",
  # "animation",
  "bevy_asset",
  "bevy_audio",
  # "bevy_gilrs",
  # "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  # "bevy_pbr",
  # "bevy_gltf",
  "bevy_render",
  # "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_dev_tools",
  "multi_threaded",
  "png",
  "hdr",
  # "vorbis",
  "x11",
  # "bevy_gizmos",
  "android_shared_stdcxx",
  # "tonemapping_luts",
  "default_font",
  "webgl2",
  "bevy_debug_stepping",

  "async-io",
  "wayland",
]

[patch.crates-io]
bevy = {git="https://github.com/wang-zi-tao/bevy",rev="73fa93681769a2d75dd79db59f7b388db35c3ccc"}
bevy_log = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_pbr = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_core = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_app = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_utils = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_asset = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_core_pipeline = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_derive = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_ecs = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_math = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_reflect = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_render = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_transform = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_window = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_hierarchy = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
bevy_color = { git = "https://github.com/wang-zi-tao/bevy", rev = "73fa93681769a2d75dd79db59f7b388db35c3ccc" }
