[package]
name = "bevy-relationship-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.8"
lazy_static ="1.4"
convert_case = "0.6.0"
syn_derive = "0.1.6"
