[package]
name = "bevy-relationship-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {workspace=true, features=["full"]}
quote = {workspace=true}
proc-macro2 = {workspace=true}
regex = {workspace=true}
lazy_static ={workspace=true}
convert_case = {workspace=true}
syn_derive = {workspace=true}
derive-syn-parse = {workspace=true}
structstruck = {workspace=true}

[profile.dev.package."*"]
opt-level = 3
