[package]
name = "bevy-relationship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
smallvec = "1.10.0"
bevy-relationship-derive = {path="../bevy-relationship-derive/"}

[profile.dev.package."*"]
opt-level = 3

