[package]
name = "bevy-relationship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
smallvec = "1.10.0"
bevy-relationship-derive = {path="../bevy-relationship-derive/"}
petgraph = "0.6.5"
rand = "0.8.5"
tokio = {workspace = true, features = ["sync"]}
futures = {workspace = true}
fixedbitset = "0.5.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[profile.dev.package."*"]
opt-level = 3

[[test]]
name = "query"
path = "./tests/query.rs"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true
