[package]
name = "dway-client-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
dway-protocol = {path="../dway-protocol/"}
dway-server = {path="../dway-server/"}

log = {}
crossbeam-channel = {}
failure = {}
uuid = {}
lru = {}
# bevy_mod_picking = "0.11.0"
# bevy_mod_raycast = "0.7"
rand = {}
bytemuck = "1.13.0"
smallvec = "1.10.0"
bevy = {}

[dependencies.smithay]
# default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_vulkan",
    "desktop",
    "renderer_gl",
    "renderer_multi",
    "use_system_lib",
    "xwayland",
]
path = "../../smithay"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
