[package]
name = "dway-client-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
dway-server = {path="../dway-server/"}
bevy-relationship = {path="../bevy-relationship/"}

log = { workspace = true }
crossbeam-channel = { workspace = true }
failure = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde={ workspace = true }
bytemuck = "1.13.0"
smallvec = "1.10.0"
bevy = "0.12"
getset = "0.1.2"
bitflags = "2.4.0"
anyhow = { version="1.0", features = ["backtrace"] }

pulsectl-rs = "0.3.2"
libpulse-binding = "2.24.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
