[package]
name = "dway-client-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dway-util = {path="../dway-util/"}
dway-server = {path="../dway-server/"}
bevy-relationship = {path="../bevy-relationship/"}

derive_builder = {workspace=true}
log = { workspace = true }
crossbeam-channel = { workspace = true }
failure = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde={ workspace = true }
bytemuck = "1.13.0"
smallvec = "1.10.0"
bevy = { workspace = true }
getset = "0.1.2"
bitflags = "2.4.0"
anyhow = { version="1.0", features = ["backtrace"] }
structstruck = "0.4.1"
smart-default = {workspace = true}
indexmap = {workspace=true}
smol_str = {workspace=true}
tokio = {workspace=true}

pulsectl-rs = "0.3.2"
libpulse-binding = "2.24.0"

sysinfo = { version="0.30.11", featrues=[] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
system_shutdown = "4.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
