[package]
name = "dway-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}

log = "0.4.17"
failure = "0.1.8"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.6"
uuid = "1.2.2"
bevy_math = "0.9"
bevy_input = "0.9"
bevy_reflect = "0.9.1"
