[package]
name = "dway-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}

log = {}
failure = {}
lazy_static = {}
crossbeam-channel = {}
uuid = {}
# bevy = {}
[dependencies.bevy]
features = ["jpeg"]
path = "../../bevy"

