[package]
name = "dway-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
bevy-relationship = {path="../bevy-relationship/"}

lazy_static = "1.4.0"
crossbeam-channel = "0.5.6"
uuid = "1.2.2"
memory-stats = "1.1.0"
image = "0.24.6"
rand = "0.8"
thiserror = "1"
anyhow = { version="1.0", features = ["backtrace"] }
xcursor = {version = "0.3.3"}
xkbcommon = "0.5.0"
renderdoc = {version = "0.11.0", optional = true}
bevy = "0.11"
wgpu={version="0.16",features=["angle"]}
wgpu-hal={version="0.16",features=["gles"]}
glow = {version="0.12.1"}
khronos-egl = { version="4.1",features= ["dynamic","static"] }
ash = { version = "0.37.3", features = [] }
send_wrapper = "0.6.0"
serde={}
wayland-server = { version="0.31.0",features = ["log"] }
wayland-backend = { version="0.3.2", features = ["server_system", "log"] }
wayland-protocols = { version = "0.31.0", features = ["unstable", "staging", "server", "wayland-server"]}
inlinable_string = "0.1.15"
nix = "0.26.2"
phf = { version = "0.11", features = ["macros"] }
bitflags = "2.3.1"
drm-fourcc = "2.2.0"
rstar = "0.11.0"
tokio = { version="1.28.0", features = [ "full" ] }
bytes = "1.4.0"
bevy-tokio-tasks = "0.11"
tempfile = "3.6.0"
encoding = { version = "0.2.33" }
scopeguard = "1.2"
bincode = "1.3.3"
tracing = { version="0.1",features=["release_max_level_debug", "log"] }
freedesktop-desktop-entry = "0.5.0"
ini = "1.3.0"
scan_dir = "0.3.3"
linicon = "2.3.0"
gettext-rs = "0.7.0"
current_locale = "0.1.1"
icon-loader = "0.4.0"
bevy_svg = { version="0.11", default-features = false }
# kayak_ui = {git="https://github.com/wang-zi-tao/dway_kayak_ui", branch="dway"}
kayak_ui = {path="../../../../Code/bevy-kayak/"}

[dependencies.x11rb]
default-features = false
features = ["composite"]
version = "0.12.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"


