[package]
name = "dway-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
bevy-relationship = {path="../bevy-relationship/"}

lazy_static = { workspace=true }
crossbeam-channel = {workspace=true}
uuid = { workspace=true }
memory-stats = "1.1.0"
image = "0.24.6"
rand = { workspace=true }
thiserror = { workspace=true }
anyhow = { workspace=true }
xcursor = {version = "0.3.3"}
xkbcommon = "0.5.0"
renderdoc = {version = "0.11.0", optional = true}
bevy = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }
glow = { workspace = true }
khronos-egl = { workspace = true }
ash = { workspace = true }
send_wrapper = "0.6.0"
wayland-server = { version="0.31.0",features = ["log"] }
wayland-backend = { version="0.3.2", features = ["server_system", "log"] }
wayland-protocols = { version = "0.31.0", features = ["unstable", "staging", "server", "wayland-server"]}
inlinable_string = "0.1.15"
nix = {workspace=true}
phf = { version = "0.11", features = ["macros"] }
bitflags = { workspace = true }
drm-fourcc = "2.2.0"
rstar = "0.11.0"
async-process = "2.0.0"
futures = {workspace=true}
futures-lite = {workspace=true}
# tokio = { version="1.28.0", features = [ "full" ] }
# bytes = "1.4.0"
# bevy-tokio-tasks = "0.11"
tempfile = "3.6.0"
encoding = { version = "0.2.33" }
scopeguard = {workspace=true}
bincode = "1.3.3"
tracing = {workspace=true}
freedesktop-desktop-entry = "0.5.0"
ini = "1.3.0"
scan_dir = "0.3.3"
linicon = "2.3.0"
gettext-rs = "0.7.0"
current_locale = "0.1.1"
icon-loader = "0.4.0"
bevy_svg = {workspace = true}
measure_time = {workspace = true}
serde = {workspace = true}
winnow = "0.5.30"
async-fs = "2.1.0"
ron = "0.8.1"
derive_builder = {workspace=true}
structstruck = {workspace=true}
x11rb = { version="*", default-features=false, features = ["composite"] }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

