[package]
name = "dway-tty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}

smallvec = {workspace=true}
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
thiserror = {workspace=true}
anyhow = {workspace=true}
khronos-egl = {workspace=true}
send_wrapper = "0.6.0"
nix = {workspace=true}
libloading = "0.8"
ash = {workspace=true}
glow = {workspace=true}
bevy = {workspace=true}
wgpu={workspace=true}
wgpu-hal={workspace=true}
libseat = "0.2.1"
crossbeam = {workspace=true}
getset = {workspace=true}
scopeguard = {workspace=true}
tracing = {workspace=true}
tracing-appender = {workspace=true}
tracing-subscriber = {workspace=true}
bitflags = {workspace=true}
double-map = "0.14.0"
smart-default = {workspace = true}
measure_time = {workspace=true}

drm = {version="0.11"}
drm-fourcc = "^2.2.0"
udev = "0.8"
gbm = "0.14"
xkbcommon = "0.7"
xcursor = {version = "0.3"}
drm-ffi = "0.7"
input = "0.9"
smol_str = {workspace=true}

[dev-dependencies]
bevy = {workspace=true, features=["bevy_pbr","animation"]}
