[package]
name = "dway-udev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
dway-protocol = {path="../dway-protocol/"}
dway-server = {path="../dway-server/"}

font-kit = "0.11.0"
chrono = {}
log = {}
crossbeam-channel = {}
failure = {}
uuid = {}
lru = {}
rand = {}
slog = {version = "2.1.1",features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.2"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8"
thiserror = "1"
xcursor = {version = "0.3.3"}
xkbcommon = "0.5.0"
renderdoc = {version = "0.10.1", optional = true}
raw-window-handle = "0.5.0"
khronos-egl = {}
send_wrapper = "0.6.0"
nix = {}
libloading = "0.7.4"
glow = {}
wgpu = {}
wgpu-hal = {}

[dependencies.bevy]
features = ["jpeg"]
path = "../../bevy"

[dependencies.smithay]
# default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_vulkan",
    "desktop",
    "renderer_gl",
    "renderer_multi",
    "use_system_lib",
    "xwayland",
]
path = "../../smithay"
# git = "https://github.com/Smithay/smithay"

# [profile.dev]
# opt-level = 1
#
# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
#
# [profile.release]
# lto = "thin"

