[package]
name = "dway-udev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11.0"
font-kit = "0.11.0"
chrono = {}
crossbeam-channel = {}
uuid = {}
lru = {}
rand = {}
thiserror = "1"
anyhow = { version="1.0", features = ["backtrace"] }
renderdoc = {version = "0.10.1", optional = true}
raw-window-handle = "0.5.0"
khronos-egl = "4.1.0"
ash = { version = "0.37.3", features = [] }
send_wrapper = "0.6.0"
nix = "0.26.2"
libloading = "0.7.4"
glow = {}
bevy = { version="0.10" }
wgpu={version="0.15.1",features=["angle", "vulkan-portability"]}
wgpu-hal={version="0.15.1",features=["gles", "egl", "glow", "vulkan", "ash"]}
libseat = "0.2.1"
crossbeam = "0.8.2"
getset = "0.1.2"
scopeguard = "1.2.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
bitflags = "2.4.0"
double-map = "0.14.0"

drm = {version="0.9.0"}
drm-fourcc = "^2.2.0"
udev = "0.7.0"
gbm = "0.12.0"
xkbcommon = "0.5.0"
xcursor = {version = "0.3.3"}
drm-ffi = "0.5.0"
input = "0.8.3"

[profile.release]
lto = "thin"
