[package]
name = "dway-ui-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {workspace=true}
quote = {workspace=true}
proc-macro2 = {workspace=true}
regex = {workspace=true}
regex-macro = {workspace=true}
lazy_static ={workspace=true}
convert_case = {workspace=true}
syn_derive = {workspace=true}
derive-syn-parse = {workspace=true}
anyhow = {workspace=true}

[features]
default = []
css = []
# hot_reload = []

