[package]
name = "dway-ui-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-ui-derive = {path="../dway-ui-derive/", features=[]}
bevy-relationship = {path="../bevy-relationship"}

anyhow = {workspace=true}
chrono = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
failure = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
bevy = { workspace = true }
bevy_svg.workspace = true
const-fnv1a-hash = "1.1.0"
bitflags = {workspace=true}
derive_builder = {workspace=true}
# bevy_tweening = "0.9.0"
# dexterous_developer = {  workspace = true, optional=true }
serde = { workspace = true }
measure_time = {workspace = true}
smart-default = {workspace = true}
bevy_ecss = { version="0.6.0",optional=true }
ansi-str = "0.8.0"
structstruck = {workspace=true}
encase = "0.7.0"
bytemuck = "1.14.3"
bevy_prototype_lyon = "0.11.0"
undo = "0.51.0"
interpolation = "0.3.0"
type-equals = "0.1.0"
downcast-rs = {workspace=true}

[dev-dependencies]
regex = {workspace=true}
lazy_static = {workspace=true}
pretty_assertions = "1.4.0"
image = "0.23"
image-diff = "0.1"
tempdir = "0.3.7"
bevy_image_export = "0.10"

[features]
# hot_reload = ["dep:dexterous_developer","dway-ui-derive/hot_reload"]
css = ["dep:bevy_ecss"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
