[package]
name = "dway-ui-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
dway-ui-derive = {path="../dway-ui-derive/", features=[]}
bevy-relationship = {path="../bevy-relationship"}
dway-util = {path="../dway-util"}

anyhow = {workspace=true}
chrono = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
failure = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
bevy = { workspace = true }
bevy_svg.workspace = true
const-fnv1a-hash = "1.1.0"
bitflags = {workspace=true}
derive_builder = {workspace=true}
dexterous_developer = {  workspace = true, optional=true }
bevy_dexterous_developer = {  workspace = true, optional=true }
serde = { workspace = true }
measure_time = {workspace = true}
smart-default = {workspace = true}
ansi-str = "0.8.0"
structstruck = {workspace=true}
bytemuck = "1.14.3"
bevy_prototype_lyon = {workspace=true}
undo = "0.51.0"
interpolation = "0.3.0"
type-equals = "0.1.0"
downcast-rs = {workspace=true}
bevy-trait-query = {workspace=true}
derive_more = "0.99.17"
rayon = {workspace=true}
dyn-eq = {workspace=true}
smallbox = {workspace=true}
tokio = {workspace=true}
slab_tree = "0.3.2"
petgraph = "0.6.5"
unicode-segmentation = "1.12"

[dev-dependencies]
bevy = { workspace = true, features = ["png", "jpeg"] }
regex = {workspace=true}
lazy_static = {workspace=true}
pretty_assertions = "1.4.0"
image = {workspace=true}
image-diff = "0.1"
tempdir = "0.3.7"
bevy-inspector-egui = "0.29"

[features]
hot_reload = [
    "dep:dexterous_developer",
    "dep:bevy_dexterous_developer",
    "dway-ui-derive/hot_reload"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[[test]]
name = "shader"
path = "./tests/shader/test.rs"
