[package]
name = "dway-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dway-util = {path="../dway-util/"}
dway-server = {path="../dway-server/"}
dway-tty = {path="../dway-tty/"}
dway-client-core = {path="../dway-client-core/"}
dway-ui-derive = {path="../dway-ui-derive/", features=["css"]}
bevy-relationship = {path="../bevy-relationship"}

font-kit = { version="0.12.0", features=["loader-freetype-default", "source-fontconfig-default"] }
chrono = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
failure = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
bevy = { workspace = true }
bevy_svg = { version="0.12", default-features = false, features = ["2d"] }
bevy_vector_shapes = "0.6"
const-fnv1a-hash = "1.1.0"
bitflags = "2.4.1"
derive_builder = "0.12.0"
bevy_tweening = "0.9.0"
dexterous_developer = {  workspace = true, optional=true }
serde = { workspace = true }
measure_time = {workspace = true}
smart-default = {workspace = true}
bevy_ecss = "0.6.0"
ansi-str = "0.8.0"
structstruck = "0.4.1"

[dev-dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"

[features]
hot_reload = ["dep:dexterous_developer","dway-ui-derive/hot_reload"]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
